# opt_pyFE

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/opt_pyFE/: EmpaquetadoGab.py  Empaquetado_bandas_bollinger_analiticos.py  LSTM_V3.py  LSTM_V4.py  Modelos Bert.py  Paquete_AnalisisRiesgo2.py  Paquete_modulacion_markopt_RD.py  __init__.py  cli.py  defmodelmach.py  distribución.py  opt_pyFE estandarizado.py  opt_pyFE.py  tutorial_optyFE.py
tests/: __init__.py  test_opt_pyFE.py
